@@ -1,5 +1,16 @@
 2011-08-03  Lucas Forschler  <lforschler@apple.com>
 
+    Merged 91438.
+
+    2011-07-20  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Build fix after r91435.
+
+        * platform/mac/ScrollViewMac.mm:
+        (WebCore::ScrollView::platformSetScrollbarOverlayStyle):
+
+2011-08-03  Lucas Forschler  <lforschler@apple.com>
+
     Merged 91435.
 
     2011-07-20  Tim Horton  <timothy_horton@apple.com>
